--- a/src/hugo/content/blog/dnd_is_not_universal/zendikar.adoc
+++ b/src/hugo/content/blog/dnd_is_not_universal/zendikar.adoc
@@ -1,33 +1,11 @@
 ---
-title: "Why D&D 5th Edition doesn't work for every setting Part I: Zendikar"
-description: "Or 'a rant turned essay on the dangers of D&D as a universal roleplaying system and how I beg you to please play another RPG'"
+title: "Part I: Zendikar"
+description: "On how a setting inspired by D&D wouldn't actually work in the latest D&D edition."
 date: 2021-12-13T10:10:00+02:00
 draft: false
 tags: ["roleplaying-games", "dungeons-and-dragons", "magic-the-gathering",
 "why-dnd-5e-does-not-work-for-every-setting"]
 ---
-In the beginning, I intended to write a very short rant for a Facebook group I'm
-in. Then, I realized I have a LOT to say about this, and thus launched VSCode as
-this turned into the first post of what I plan to be a series about how D&D can't
-model every single setting.
-
-In each post, I'll give a brief comment on a specific setting adapted or published
-for D&D. All of them can give us unique insights into how D&D fails at delivering
-certain experiences or succeeds at delivering others, and how the universalizing
-approach of D&D 5e actually reduced the game’s ability to deliver on what used to
-be its core premises.
-
-At the end of each comment, I’ll briefly explain, in my opinion, what this means
-for D&D 5e in relation to the setting and what other systems would do a good or
-better job at modeling the narratives the setting is focused on. For the sake of
-getting people to actually try out those systems, I'll link to official pages and
-try to go with more widely-known and supported systems that can model large amounts of
-the setting's intended experience instead of smaller specific ones, unless I feel
-a system fits too well to not mention.
-
-Without further ado, I'll start this series off with Magic: The Gathering's Zendikar.
-
-'''
 
 The worst thing to come out of WotC owning both the biggest Trading Card Game on
 the market and the biggest Tabletop RPG on the shelves is the fact that in an effort
